--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "passport-local": "latest",
         "express-session": "^1.2.1",
         "scrypt": "3.0.1",
-        "sjcl": "1.0.1"
+        "sjcl": "1.0.1",
+        "validator": "3.16.0"
     }
 }
