Updated the session module

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "rethinkdb": "latest",
         "passport": "latest",
         "passport-local": "latest",
-        "express-session": "^1.2.1",
+        "cookie-session": "^1.0.2",
         "scrypt": "3.0.1",
         "sjcl": "1.0.1",
         "validator": "3.16.0"
