--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "cookie-session": "^1.0.2",
         "scrypt": "3.0.1",
         "sjcl": "1.0.1",
-        "validator": "3.16.0"
+        "validator": "3.16.0",
+        "bluebird": "^2.1.3"
     },
     "private": true,
     "engines": {
