--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "scrypt": "3.0.1",
         "sjcl": "1.0.1",
         "validator": "3.16.0",
-        "bluebird": "^2.1.3"
+        "bluebird": "^2.1.3",
+        "colors": "^0.6.2"
     },
     "private": true,
     "engines": {
